<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name_short">T-CEP Alert</string>
    <string name="app_name">T-CEP Alert Notifier</string>
    <string name="alerts">Alerts</string>
    <string name="links">Links</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="loading">Loading latest alerts.</string>
    <string name="loaded">Alerts loaded.</string>
    <string name="no_network">No network connection.</string>
    <string name="no_alerts">No alerts available.</string>
    <string name="posted">Posted:</string>
    <string name="updated">Updated:</string>
    <string name="t_cep_link_title">T-CEP</string>
    <string name="t_cep_link_url"><a href="http://t-cep.org">http://t-cep.org</a></string>
    <string name="topanga_survival_link_title">Topanga Survival Guide</string>
    <string name="topanga_survival_link_url"><a href="http://topangasurvival.wordpress.com">http://topangasurvival.wordpress.com</a></string>
    <string name="alert_la_link_title">Alert LA</string>
    <string name="alert_la_link_url"><a href="http://portal.lacounty.gov/wps/portal/alertla">http://portal.lacounty.gov/wps/portal/alertla</a></string>
    <string name="about_text_1">T-CEP Alert Notifier provides alerts issued by the Topanga Coalition for Emergency Preparedness (T-CEP) on your Android device.</string>
    <string name="about_text_2">This application is unofficial and not associated with T-CEP.</string>
    <string name="about_text_3">This application is also open-source, meaning the source code may be duplicated and modified by anyone to create a similar application.</string>
    <string name="about_text_4">Get the source code:</string>
    <string name="about_text_5"><a href="https://github.com/ruscoe/T-CEP-Alert">https://github.com/ruscoe/T-CEP-Alert</a></string>
    <string name="check_updates_every">Check for updates:</string>

    <string-array name="update_options_array">
        <item>Never</item>
        <item>Every 15 Minutes</item>
        <item>Every 30 Minutes</item>
        <item>Every Hour</item>
    </string-array>

</resources>