<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/View"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/TextLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            style="@style/ViewLinkHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_cep_link_title" />

        <TextView
            android:id="@+id/tCepUrl"
            style="@style/ViewText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_cep_link_url" />

        <TextView
            style="@style/ViewLinkHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/topanga_survival_link_title" />

        <TextView
            android:id="@+id/topangaSurvivalUrl"
            style="@style/ViewText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/topanga_survival_link_url" />

        <TextView
            style="@style/ViewLinkHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_la_link_title" />

        <TextView
            android:id="@+id/alertLaUrl"
            style="@style/ViewText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_la_link_url" />
    </LinearLayout>

</ScrollView>